fix[JWT]: 토큰 생성과 재발급에 관한 로직의 변경으로 인한 테스트 코드 수정