@@ -1,26 +1,23 @@
 package com.ai.lawyer.domain.post.controller;
 
-import com.ai.lawyer.domain.post.dto.PostDetailDto;
 import com.ai.lawyer.domain.post.dto.PostRequestDto;
 import com.ai.lawyer.domain.post.service.PostService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
+import org.junit.jupiter.api.BeforeEach;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Import;
 import com.ai.lawyer.global.security.SecurityConfig;
-import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.http.MediaType;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContext;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
+import jakarta.servlet.http.Cookie;
+import static org.mockito.BDDMockito.*;
+import com.ai.lawyer.global.jwt.TokenProvider;
 
 import java.util.List;
 
@@ -33,40 +30,50 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 @Import(SecurityConfig.class)
 @AutoConfigureMockMvc
 @WebMvcTest(
-    controllers = PostController.class,
-    excludeAutoConfiguration = {
-        org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration.class,
-        org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration.class,
-        org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration.class,
-        org.springframework.boot.autoconfigure.orm.jpa.JpaBaseConfiguration.class
-    }
+        controllers = PostController.class,
+        excludeAutoConfiguration = {
+                org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration.class,
+                org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration.class,
+                org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration.class,
+                org.springframework.boot.autoconfigure.orm.jpa.JpaBaseConfiguration.class
+        }
 )
 class PostControllerTest {
     @Autowired
     private MockMvc mockMvc;
-    @MockBean
+    @MockitoBean
     private PostService postService;
-    @MockBean
+    @MockitoBean
     private com.ai.lawyer.domain.member.repositories.MemberRepository memberRepository;
-    @MockBean
+    @MockitoBean
     private com.ai.lawyer.global.jwt.TokenProvider tokenProvider;
-    @MockBean
+    @MockitoBean
     private com.ai.lawyer.global.jwt.CookieUtil cookieUtil;
-    @MockBean
+    @MockitoBean
     private org.springframework.data.jpa.mapping.JpaMetamodelMappingContext jpaMappingContext;
     @Autowired
     private ObjectMapper objectMapper;
 
+    @BeforeEach
+    void setUp() {
+        given(cookieUtil.getAccessTokenFromCookies(any())).willReturn("valid-access-token");
+        given(tokenProvider.validateTokenWithResult("valid-access-token"))
+                .willReturn(TokenProvider.TokenValidationResult.VALID);
+        given(tokenProvider.getMemberIdFromToken("valid-access-token")).willReturn(1L);
+        given(tokenProvider.getRoleFromToken("valid-access-token")).willReturn("USER");
+    }
+
     @Test
     @DisplayName("게시글 등록")
-    @WithMockUser(username="1")
     void t1() throws Exception {
         PostRequestDto dto = PostRequestDto.builder().postName("테스트 제목").postContent("테스트 내용").build();
         com.ai.lawyer.domain.post.dto.PostDto responseDto = com.ai.lawyer.domain.post.dto.PostDto.builder().postId(1L).postName("테스트 제목").postContent("테스트 내용").build();
         Mockito.when(postService.createPost(Mockito.any(), Mockito.anyLong())).thenReturn(responseDto);
+
         mockMvc.perform(post("/api/posts")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(dto)))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(dto))
+                        .cookie(new Cookie("accessToken", "valid-access-token")))
                 .andExpect(status().isOk())
                 .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath("$.code").value(201))
                 .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath("$.message").value("게시글이 등록되었습니다."))
@@ -75,63 +82,67 @@ class PostControllerTest {
 
     @Test
     @DisplayName("게시글 전체 조회")
-    @WithMockUser(username="1")
     void t2() throws Exception {
         List<com.ai.lawyer.domain.post.dto.PostDetailDto> posts = java.util.Collections.emptyList();
         Mockito.when(postService.getAllPosts()).thenReturn(posts);
-        mockMvc.perform(get("/api/posts"))
+
+        mockMvc.perform(get("/api/posts")
+                        .cookie(new Cookie("accessToken", "valid-access-token")))
                 .andExpect(status().isOk())
                 .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath("$.result").isArray());
     }
 
     @Test
     @DisplayName("게시글 단일 조회")
-    @WithMockUser(username="1")
     void t3() throws Exception {
         com.ai.lawyer.domain.post.dto.PostDto postDto = com.ai.lawyer.domain.post.dto.PostDto.builder().postId(1L).postName("테스트 제목").build();
         com.ai.lawyer.domain.post.dto.PostDetailDto postDetailDto = com.ai.lawyer.domain.post.dto.PostDetailDto.builder().post(postDto).build();
         Mockito.when(postService.getPostById(Mockito.anyLong())).thenReturn(postDetailDto);
-        mockMvc.perform(get("/api/posts/1"))
+
+        mockMvc.perform(get("/api/posts/1")
+                        .cookie(new Cookie("accessToken", "valid-access-token")))
                 .andExpect(status().isOk())
                 .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath("$.result.post.postId").value(1L));
     }
 
     @Test
     @DisplayName("회원별 게시글 목록 조회")
-    @WithMockUser(username="1")
     void t4() throws Exception {
         List<com.ai.lawyer.domain.post.dto.PostDto> postDtoList = List.of(com.ai.lawyer.domain.post.dto.PostDto.builder().postId(1L).postName("테스트 제목").build());
-        com.ai.lawyer.domain.post.dto.PostDetailDto postDetailDto = com.ai.lawyer.domain.post.dto.PostDetailDto.builder().post(postDtoList.get(0)).build();
-        List<com.ai.lawyer.domain.post.dto.PostDetailDto> detailList = List.of(postDetailDto);
+        com.ai.lawyer.domain.post.dto.PostDetailDto postDetailDto = com.ai.lawyer.domain.post.dto.PostDetailDto.builder().post(postDtoList.getFirst()).build();
         Mockito.when(postService.getPostsByMemberId(Mockito.anyLong())).thenReturn(postDtoList);
         Mockito.when(postService.getPostDetailById(Mockito.anyLong())).thenReturn(postDetailDto);
-        mockMvc.perform(get("/api/posts/member/1"))
+
+        mockMvc.perform(get("/api/posts/member/1")
+                        .cookie(new Cookie("accessToken", "valid-access-token")))
                 .andExpect(status().isOk())
                 .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath("$.result").isArray());
     }
 
     @Test
     @DisplayName("게시글 수정")
-    @WithMockUser(username="1")
     void t5() throws Exception {
         com.ai.lawyer.domain.post.dto.PostDto postDto = com.ai.lawyer.domain.post.dto.PostDto.builder().postId(1L).postName("수정 제목").build();
         com.ai.lawyer.domain.post.dto.PostDetailDto postDetailDto = com.ai.lawyer.domain.post.dto.PostDetailDto.builder().post(postDto).build();
         Mockito.doNothing().when(postService).patchUpdatePost(Mockito.anyLong(), Mockito.any());
         Mockito.when(postService.getPostDetailById(Mockito.anyLong())).thenReturn(postDetailDto);
         com.ai.lawyer.domain.post.dto.PostUpdateDto updateDto = com.ai.lawyer.domain.post.dto.PostUpdateDto.builder().postName("수정 제목").build();
+
         mockMvc.perform(put("/api/posts/1")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(updateDto)))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(updateDto))
+                        .cookie(new Cookie("accessToken", "valid-access-token")))
                 .andExpect(status().isOk())
                 .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath("$.result.post.postName").value("수정 제목"));
     }
 
     @Test
     @DisplayName("게시글 삭제")
-    @WithMockUser(username="1")
     void t6() throws Exception {
         Mockito.doNothing().when(postService).deletePost(Mockito.anyLong());
-        mockMvc.perform(delete("/api/posts/1"))
+
+        mockMvc.perform(delete("/api/posts/1")
+                        .cookie(new Cookie("accessToken", "valid-access-token")))
                 .andExpect(status().isOk());
     }
 }
